--- a/webgl.html
+++ b/webgl.html
@@ -10,8 +10,9 @@
       </style>
 	  <!-- link rel="stylesheet" href="w3.css" -->
       <script src="./canvas1.js"></script>
-      <script id="123" src="./canvas2.js"></script>
+      <script src="./canvas2.js"></script>
       <script src="./canvas3.js"></script>
+      <script src="./canvas4.js"></script>
 
 </head>
 <body>
