--- a/webgl.html
+++ b/webgl.html
@@ -7,16 +7,21 @@
          #mycanvas2{border:1px solid green;}
          #mycanvas3{border:2px solid blue;}
          #mycanvas4{border:2px solid yellow;}
+         #mycanvas5{border:2px solid cyan;}
+         #mycanvas6{border:2px solid magenta;}
       </style>
 	  <!-- link rel="stylesheet" href="w3.css" -->
       <script src="./canvas1.js"></script>
       <script src="./canvas2.js"></script>
       <script src="./canvas3.js"></script>
       <script src="./canvas4.js"></script>
+      <script src="./canvas5.js"></script>
+      <script src="./canvas6.js"></script>
 
 </head>
 <body>
-   <canvas id = "mycanvas3" width = "300" height = "300"></canvas><canvas id = "mycanvas4" width = "300" height = "300"></canvas><br/>
+   <canvas id = "mycanvas3" width = "200" height = "200"></canvas><canvas id = "mycanvas4" width = "200" height = "200" ></canvas><br/>
+   <canvas id = "mycanvas5" width = "200" height = "200" ></canvas><canvas id = "mycanvas6" width = "200" height = "200" ></canvas><br/>
    <canvas id = "mycanvas1" width = "310" height =  "40"></canvas><canvas id = "mycanvas2" width =  "40" height =  "40"></canvas><br/>
 </body>
 </html>
