--- a/cube.cube.html
+++ b/cube.cube.html
@@ -4,8 +4,8 @@
   <head>
     <meta charset='utf-8'>
     <title>WebGL Example: Transforming normals</title>
-    <script language="JavaScript" type="text/javascript" src="./shapes.js"></script>
-    <script language="JavaScript" type="text/javascript" src="./renderer.js"></script>
+    <script language="JavaScript" type="text/javascript" src="./cube.shapes.js"></script>
+    <script language="JavaScript" type="text/javascript" src="./cube.renderer.js"></script>
     <script language="JavaScript" type="text/javascript">
       var renderer = 0;
 
