--- a/webgl.html
+++ b/webgl.html
@@ -26,6 +26,7 @@
          }
 	  </script>
       <script src="./glwrapper.js"></script>
+      <script src="./glmath.js"></script>
       
 </head>
 <body>
@@ -56,8 +57,32 @@
           void main()
           {
              gl_Position = coordinates;
+             forFragColor = vec4(2.0 * vec3(0.0, 0.5, 0.0), 1.0) * vec4(inputNormal, 0.9);
+          }
+   	  </script>
+      <script type="x-shader/x-fragment">
+         precision mediump float;
+         varying vec4 forFragColor;
+         void main() 
+         {
+           gl_FragColor = forFragColor;
+         }
+   	  </script>
+   </canvas>
+   <canvas id = "cone1" width = "200" height = "200"  class="yellow">
+      <script src="./cone1.js"></script>
+      <script type="x-shader/x-vertex">
+   	      attribute vec4 coordinates;
+          attribute vec3 inputNormal;
+          varying vec4 forFragColor;
+		  //vec3 amp(vec3 a, float x){return vec3(a.x * x, a.y * x, a.z * z);}
+          void main()
+          {
+             gl_Position = coordinates;
              //multiply normal with green color
-             forFragColor = vec4(0.0, 1.0, 0.0, 1.0) * vec4(inputNormal, 1.0);//0.5);
+             //forFragColor = vec4(0.0, 1.0, 0.0, 1.0) * vec4(normalize(inputNormal), 1.0);//0.5);
+             forFragColor = vec4(0.0, 1.0, 0.0, 1.0) * vec4(normalize(inputNormal), 0.8);//0.5);
+             //forFragColor = vec4(0.0, 1.0, 0.0, 1.0);
              //forFragColor = vec4(inputNormal, 0.5);
           }
    	  </script>
