--- a/webgl.html
+++ b/webgl.html
@@ -30,6 +30,15 @@
       
 </head>
 <body>
+   <a href="https://www.tutorialspoint.com/webgl/index.htm">Tutorials Point</a><br/>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-lighting-directional.html">lighting</a><br/>
+   <a href="https://en.wikipedia.org/wiki/Hadamard_product_(matrices)">componend wise multiplication</a><br/>
+   <a href="https://en.wikibooks.org/wiki/GLSL_Programming/Vector_and_Matrix_Operations">Vector And Matrix Operations</a><br/>
+   <a href="https://www.khronos.org/registry/OpenGL-Refpages/es3.1/html/cross.xhtml">cross prod</a><br/>
+   <a href="https://www.khronos.org/registry/OpenGL-Refpages/es3.1/html/dot.xhtml">Dot prod</a><br/>
+   <a href="https://www.khronos.org/registry/OpenGL-Refpages/gl4/html/transpose.xhtml">Transpose</a><br/>
+   <a href="https://community.khronos.org/t/glsl-1-5-inverse-and-transpose-functions/66755">Transpose and Inverse</a><br/>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-text-canvas2d.html">Text And 3D</a><br/>
    <canvas id = "draw"  width = "200" height = "200" class="blue">
       <script src="./draw.js"></script>
       <script type="x-shader/x-vertex">
