--- a/webgl1.html
+++ b/webgl1.html
@@ -18,7 +18,7 @@
    <div class="sample">
       Simple draw:<br/>
       <canvas id = "draw"  width = "120" height = "120" class="blue">
-         <script src="./draw.js"></script>
+         <script src="./webgl1/draw.js"></script>
          <script type="x-shader/x-vertex">
             attribute vec2 coordinates;
             void main(void)
@@ -38,7 +38,7 @@
    <div class="sample">
       Translate:<br/>
       <canvas id = "translate"  width = "120" height = "120" class="yellow" >
-         <script src="./translate.js"></script>
+         <script src="./webgl1/translate.js"></script>
          <script type="x-shader/x-vertex">
             attribute vec4 coordinates;
             void main(void)
@@ -57,7 +57,7 @@
    <div class="sample">
       Translate animate 1:<br/>
       <canvas id = "animate"  width = "120" height = "120" class="cyan">
-         <script src="./animate.js"></script>
+         <script src="./webgl1/animate.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              uniform   vec4 translation;
@@ -77,7 +77,7 @@
    <div class="sample">
       Translate animate 2:<br/>
       <canvas id = "animate second instance" width = "120" height = "120" class="magenta">
-          <script src="./animate2.js"></script>
+          <script src="./webgl1/animate2.js"></script>
           <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              uniform   vec3 translation;
@@ -97,7 +97,7 @@
    <div class="sample">
       Normals:<br/>
       <canvas id = "normals" width = "120" height = "120"  class="yellow">
-         <script src="./normals.js"></script>
+         <script src="./webgl1/normals.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -126,7 +126,7 @@
    <div class="sample">
       Colors:<br/>
       <canvas id = "usecolors" width = "120" height = "120"  class="yellow">
-          <script src="./usecolors.js"></script>
+          <script src="./webgl1/usecolors.js"></script>
           <script type="x-shader/x-vertex">
             attribute vec4 coordinates;
             attribute vec4  forFragColor;
@@ -152,7 +152,7 @@
       Cone TRIANGLE_FAN<br/>
 	  (wrong)</br>
       <canvas id = "cone" width = "200" height = "200"  class="yellow">
-         <script src="./cone.js"></script>
+         <script src="./webgl1/cone.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -178,7 +178,7 @@
 	  Normals simple, <br/>
 	  Light change direction<br/>
       <canvas id = "cone1_animate" width = "200" height = "200"  class="yellow">
-         <script src="./cone1_animate.js"></script>
+         <script src="./webgl1/cone1_animate.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -209,7 +209,7 @@
       Cone TRIANGLES (correct), </br>
 	  Normals simple <br/>
       <canvas id = "cone1" width = "200" height = "200"  class="yellow">
-         <script src="./cone1.js"></script>
+         <script src="./webgl1/cone1.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -239,7 +239,7 @@
       Cone TRIANGLES (correct), </br>
 	  Geometry <br/>
       <canvas id = "cone1_geometry" width = "200" height = "200"  class="yellow">
-         <script src="./cone1_geometry.js"></script>
+         <script src="./webgl1/cone1_geometry.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -269,7 +269,7 @@
       Cone TRIANGLES (cross), </br>
 	  Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "200" height = "200"  class="yellow">
-         <script src="./cone1_heart_geometry.js"></script>
+         <script src="./webgl1/cone1_heart_geometry.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -299,7 +299,7 @@
       Cone TRIANGLES (grad), </br>
 	  Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
-         <script src="./cone1_heart_geometry2.js"></script>
+         <script src="./webgl1/cone1_heart_geometry2.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
@@ -324,8 +324,8 @@
       </canvas>
    </div>
    <br/>
-   <canvas id = "mycanvas1"  width = "310" height =  "40"   class = "red"><script src="./2d.js"></script></canvas>
-   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./simple.js"></script></canvas><br/>
+   <canvas id = "mycanvas1"  width = "310" height =  "40"   class = "red"><script src="./webgl1/2d.js"></script></canvas>
+   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./webgl1/simple.js"></script></canvas><br/>
    Tutorials:<br/>
    <a href="https://www.tutorialspoint.com/webgl/index.htm">Tutorials Point</a><br/>
    <a href="http://www.informit.com/articles/article.aspx?p=2111395&seqNum=3">Basic Transformations, Rotatin, Scaling, Translation</a><br/>
