--- a/webgl2.html
+++ b/webgl2.html
@@ -12,19 +12,20 @@
       </style>
       <script src="./glwrapper.js"></script>
       <script src="./glmath.js"></script>
-      
+
 </head>
 <body>
    <div class="sample">
-      </br>
-      Cone TRIANGLES (grad), </br>
+      <br />
+      Cone TRIANGLES (grad), <br />
 	  Geometry <br/>
       <canvas id = "cone1 heart geometry" width = "400" height = "400"  class="yellow">
          <script src="./webgl2/cone1_heart_geometry3.js"></script>
          <script type="x-shader/x-vertex">
              attribute vec4 coordinates;
              attribute vec3 inputNormal;
-			 varying mediump vec3 nm;
+			 //bool isDrawNorms;
+			 varying vec3 nm; //varying mediump
              void main()
              {
                 gl_Position = coordinates;
@@ -33,8 +34,8 @@
          </script>
          <script type="x-shader/x-fragment">
             precision mediump float;
-            varying mediump vec3 nm;
-			
+            varying vec3 nm; //varying mediump
+
 			const vec4  greenColor     = vec4( 0.0,   1.0,   0.0, 1.0);
 			const vec3 lightDirection  = -normalize(vec3(-1.0,  -1.0,  -1.0));
             void main()
@@ -45,9 +46,12 @@
       </canvas>
    </div>
    <br/>
-   <canvas id = "mycanvas1"  width = "310" height =  "40"   class = "red"><script src="./2d.js"></script></canvas>
-   <canvas id = "mycanvas2"  width =  "40" height =  "40" class = "green"><script src="./simple.js"></script></canvas><br/>
    Tutorials:<br/>
+   <a href="http://www.opengl-tutorial.org/beginners-tutorials/tutorial-8-basic-shading/">Basic Shading</a><br/>
+   <a href="https://learnopengl.com/Lighting/Basic-Lighting">Basic Lighting</a><br/>
+   <a href="https://learnopengl.com/Getting-started/Shaders">Shaders</a><br/>
+   <a href="https://learnopengl.com/Getting-started/OpenGL">OpenGL</a><br/>
+   <a href="https://www.learnopengles.com/understanding-opengls-matrices/">Matrices</a><br/>
    <a href="https://www.tutorialspoint.com/webgl/index.htm">Tutorials Point</a><br/>
    <a href="http://www.informit.com/articles/article.aspx?p=2111395&seqNum=3">Basic Transformations, Rotatin, Scaling, Translation</a><br/>
    <a href="https://en.wikipedia.org/wiki/Hadamard_product_(matrices)">componend wise multiplication</a><br/>
@@ -59,6 +63,7 @@
    <a href="https://www.khronos.org/registry/OpenGL-Refpages/es3.1/html/cross.xhtml">cross prod</a><br/>
    <a href="https://www.khronos.org/registry/OpenGL-Refpages/es3.1/html/dot.xhtml">Dot prod</a><br/>
    <a href="https://www.khronos.org/registry/OpenGL-Refpages/gl4/html/transpose.xhtml">Transpose</a><br/>
+   <a hrev="https://www.khronos.org/opengl/wiki/GLSL_Object">GLSL Object</a><br/>
    <a href="https://www.khronos.org/opengl/wiki/Face_Culling">Face Culling</a><br/>
    <a href="https://www.khronos.org/opengl/wiki/Tessellation_Evaluation_Shader">Tesselation Evaluation Shader</a><br/>
    <a href="https://www.khronos.org/opengl/wiki/Primitive">Primitives</a><br/>
@@ -66,6 +71,7 @@
    <a href="https://community.khronos.org/">Communiti kronos</a><br/>
    <a href="https://community.khronos.org/t/glsl-1-5-inverse-and-transpose-functions/66755">Transpose and Inverse</a><br/>
    <a href="https://www.mathematik.uni-marburg.de/~thormae/lectures/graphics1/code/WebGLShaderNormalTrans/ShaderNormalTrans.html">Maths of normals</a><br/>
+   <a href="https://webglfundamentals.org/webgl/lessons/webgl-shadows.html">Shadows</a><br/>
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-lighting-directional.html">lighting</a><br/>
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-text-canvas2d.html">Text And 3D</a><br/>
    <a href="https://webglfundamentals.org/webgl/lessons/webgl-text-html.html">Text And 3D 2</a><br/>
