--- a/webgl3.html
+++ b/webgl3.html
@@ -2,13 +2,13 @@
 <head>
    <title>webgl test</title>
       <style>
-         canvas.cyan    {border:2px solid cyan;}
-         canvas.magenta {border:2px solid magenta;}
-         canvas.blue    {border:2px solid blue;}
-         canvas.red     {border:2px solid red;}
-         canvas.yellow  {border:2px solid yellow;}
-         canvas.green   {border:1px solid green;}
-         div.sample { display: inline-block;white-space: nowrap; border:1px solid magenta}
+         canvas.cyan    { border:2px solid cyan;    }
+         canvas.magenta { border:2px solid magenta; }
+         canvas.blue    { border:2px solid blue;    }
+         canvas.red     { border:2px solid red;     }
+         canvas.yellow  { border:2px solid yellow;  }
+         canvas.green   { border:1px solid green;   }
+         div.sample { display:inline-block; white-space: nowrap; border:1px solid magenta; }
       </style>
       <script src="./glwrapper.js"></script>
       <script src="./glmath.js"></script>
