--- a/webgl2.html
+++ b/webgl2.html
@@ -1,17 +1,9 @@
 <html>
 <head>
    <title>webgl test</title>
-      <style>
-         canvas.cyan    {border:2px solid cyan;}
-         canvas.magenta {border:2px solid magenta;}
-         canvas.blue    {border:2px solid blue;}
-         canvas.red     {border:2px solid red;}
-         canvas.yellow  {border:2px solid yellow;}
-         canvas.green   {border:1px solid green;}
-         div.sample { display: inline-block;white-space: nowrap; border:1px solid magenta}
-      </style>
-      <script src="./glwrapper.js"></script>
-      <script src="./glmath.js"></script>
+   <link rel="stylesheet" href="./css/default.css">
+   <script src="./glwrapper.js"></script>
+   <script src="./glmath.js"></script>
 
 </head>
 <body>
@@ -46,44 +38,8 @@
       </canvas>
    </div>
    <br/>
-   Tutorials:<br/>
-   <a href="http://www.opengl-tutorial.org/beginners-tutorials/tutorial-8-basic-shading/">Basic Shading</a><br/>
-   <a href="https://learnopengl.com/Lighting/Basic-Lighting">Basic Lighting</a><br/>
-   <a href="https://learnopengl.com/Getting-started/Shaders">Shaders</a><br/>
-   <a href="https://learnopengl.com/Getting-started/OpenGL">OpenGL</a><br/>
-   <a href="https://www.learnopengles.com/understanding-opengls-matrices/">Matrices</a><br/>
-   <a href="https://www.tutorialspoint.com/webgl/index.htm">Tutorials Point</a><br/>
-   <a href="http://www.informit.com/articles/article.aspx?p=2111395&seqNum=3">Basic Transformations, Rotatin, Scaling, Translation</a><br/>
-   <a href="https://en.wikipedia.org/wiki/Hadamard_product_(matrices)">componend wise multiplication</a><br/>
-   <a href="https://en.wikibooks.org/wiki/GLSL_Programming/Vector_and_Matrix_Operations">Vector And Matrix Operations</a><br/>
-   <a href="https://en.wikibooks.org/wiki/GLSL_Programming/Applying_Matrix_Transformations">Applying Matrix Transformations</a><br/>
-   <a href="https://en.wikibooks.org/wiki/GLSL_Programming/Vertex_Transformations">Vertex Transformations</a><br/>
-   <a href="https://www.khronos.org/webgl/wiki/Tutorial">Kronos tutorial</a><br/>
-   <a href="https://www.khronos.org/registry/OpenGL/index_es.php">Open GL ES Registry</a><br/>
-   <a href="https://www.khronos.org/registry/OpenGL-Refpages/es3.1/html/cross.xhtml">cross prod</a><br/>
-   <a href="https://www.khronos.org/registry/OpenGL-Refpages/es3.1/html/dot.xhtml">Dot prod</a><br/>
-   <a href="https://www.khronos.org/registry/OpenGL-Refpages/gl4/html/transpose.xhtml">Transpose</a><br/>
-   <a hrev="https://www.khronos.org/opengl/wiki/GLSL_Object">GLSL Object</a><br/>
-   <a href="https://www.khronos.org/opengl/wiki/Face_Culling">Face Culling</a><br/>
-   <a href="https://www.khronos.org/opengl/wiki/Tessellation_Evaluation_Shader">Tesselation Evaluation Shader</a><br/>
-   <a href="https://www.khronos.org/opengl/wiki/Primitive">Primitives</a><br/>
-   <a href="https://www.khronos.org/opengl/wiki/Type_Qualifier_(GLSL)">Type Qualifiers</a><br/>
-   <a href="https://community.khronos.org/">Communiti kronos</a><br/>
-   <a href="https://community.khronos.org/t/glsl-1-5-inverse-and-transpose-functions/66755">Transpose and Inverse</a><br/>
-   <a href="https://www.mathematik.uni-marburg.de/~thormae/lectures/graphics1/code/WebGLShaderNormalTrans/ShaderNormalTrans.html">Maths of normals</a><br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-shadows.html">Shadows</a><br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-3d-lighting-directional.html">lighting</a><br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-text-canvas2d.html">Text And 3D</a><br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-text-html.html">Text And 3D 2</a><br/>
-   <a href="https://webglfundamentals.org/webgl/lessons/webgl-shaders-and-glsl.html">Shaders and GLSL</a><br/>
-   <a href="http://www.tinysg.de/techGuides/tg10_tessellation.html">Tesselation</a><br/>
-   <a href="http://ogldev.org/www/tutorial30/tutorial30.html">Basic Tesselation</a><br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGLRenderingContext/uniform">[1234]</a><br/>
-   <a href="https://developer.mozilla.org/en-US/docs/Web/API/WebGL_API/Tutorial/Lighting_in_WebGL">Lighting</a><br/>
-   <a href="https://stackoverflow.com/questions/47760959/how-to-pass-gl-patches">StackOverflow Question Tesselation</a><br/>
-   <a href="https://stackoverflow.com/questions/33159623/how-to-implement-shadow-mapping-in-webgl">Shadow Mapping</a><br/>
-   <a href="https://stackoverflow.com/questions/51428435/how-to-determine-webgl-and-glsl-version">WebGL GLSL Versions</a><br/>
-   <a href="https://www.lighthouse3d.com/tutorials/glsl-tutorial/statements-and-functions/">Statements And Functions</a><br/>
+   <a href="./tutorials.html">Tutorials</a>
+
 
 </body>
 </html>
